--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -14,29 +14,29 @@
   },
   "devDependencies": {
     "@counterfactual/apps": "0.1.1",
-    "@firebase/app-types": "^0.3.3",
-    "@types/node": "^11.9.0",
+    "@firebase/app-types": "^0.3.7",
+    "@types/node": "^11.11.6",
     "dotenv-extended": "^2.3.0",
     "firebase-server": "^1.0.1",
-    "ganache-core": "2.5.2",
-    "jest": "24.1.0",
+    "ganache-core": "2.5.3",
+    "jest": "24.5.0",
     "jest-dot-reporter": "^1.0.7",
-    "rollup": "^1.0.1",
+    "rollup": "^1.7.2",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.19.0",
+    "rollup-plugin-typescript2": "^0.20.1",
     "ts-jest": "24.0.0",
     "ts-mockito": "^2.3.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.3.3333"
+    "tslint": "^5.14.0",
+    "typescript": "^3.3.4000"
   },
   "dependencies": {
     "@counterfactual/cf.js": "0.1.1",
     "@counterfactual/contracts": "0.1.1",
     "@counterfactual/machine": "0.1.6",
     "@counterfactual/types": "0.0.9",
-    "@firebase/util": "0.*",
+    "@firebase/util": "0.2.11",
     "ethers": "4.0.27",
     "eventemitter3": "^3.1.0",
     "firebase": "5.9.1",
