--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -20,6 +20,7 @@
     "firebase-server": "^1.0.1",
     "ganache-core": "2.5.3",
     "jest": "24.5.0",
+    "jest-cli": "24.5.0",
     "jest-dot-reporter": "^1.0.7",
     "rollup": "^1.7.2",
     "rollup-plugin-commonjs": "^9.2.0",
