--- a/packages/playground-server/package.json
+++ b/packages/playground-server/package.json
@@ -58,6 +58,7 @@
     "dotenv-extended": "^2.3.0",
     "env-cmd": "^8.0.2",
     "jest": "24.5.0",
+    "jest-cli": "24.5.0",
     "sqlite3": "^4.0.4",
     "ts-jest": "24.0.0",
     "ts-node": "^8.0.3",
