--- a/packages/tic-tac-toe-bot/package.json
+++ b/packages/tic-tac-toe-bot/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "env-cmd": "^8.0.2",
     "ethers": "4.0.27",
-    "jest": "^24.5.0",
+    "jest": "24.5.0",
     "jest-cli": "24.5.0",
     "ts-node": "^8.0.3",
     "tslint": "^5.14.0",
